refactor container to allow faster builds

--- a/janelia_jupyterhub/Dockerfile
+++ b/janelia_jupyterhub/Dockerfile
@@ -1,15 +1,8 @@
 FROM jupyterhub/jupyterhub:latest
 
-# add to requirements
-#RUN pip install jupyterhub-ldapauthenticator
-
 WORKDIR /srv/jupyterhub
 
+# copy in jupyterhub_config.py
 ADD . /srv/jupyterhub
-
-RUN pip install -r requirements.txt
-
-EXPOSE 8000
-EXPOSE 389
 
 CMD jupyterhub -f /srv/jupyterhub/jupyterhub_config.py
