--- a/jupyterhub_base/Dockerfile
+++ b/jupyterhub_base/Dockerfile
@@ -5,6 +5,11 @@ WORKDIR /srv/jupyterhub
 ADD . /srv/jupyterhub
 
 RUN pip install -r requirements.txt
+RUN  git clone https://github.com/jupyterhub/dockerspawner.git && \
+     cd dockerspawner && \
+     pip install -r requirements.txt && \
+     python setup.py install && \
+     cd ..
 
 EXPOSE 8000
 EXPOSE 389
