--- a/jupyterhub_base/Dockerfile
+++ b/jupyterhub_base/Dockerfile
@@ -7,8 +7,7 @@ ADD . /srv/jupyterhub
 RUN pip install -r requirements.txt
 RUN  git clone https://github.com/jupyterhub/dockerspawner.git && \
      cd dockerspawner && \
-     pip install -r requirements.txt && \
-     python setup.py install && \
+     pip install . && \
      cd ..
 
 EXPOSE 8000
