expose 8080 and undo trial fix

--- a/janelia_jupyterhub/Dockerfile
+++ b/janelia_jupyterhub/Dockerfile
@@ -5,4 +5,6 @@ WORKDIR /srv/jupyterhub
 # copy in jupyterhub_config.py
 ADD . /srv/jupyterhub
 
+EXPOSE 8080
+
 CMD jupyterhub -f /srv/jupyterhub/jupyterhub_config.py
