--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,7 @@ services:
       - "8080:8080"
     networks:
       - jhub
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 networks:
   jhub:
