try just mounting the docker executable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,6 @@ services:
       - jhub
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/usr/bin/docker
 networks:
   jhub:
