--- a/jupyterhub_base/Dockerfile
+++ b/jupyterhub_base/Dockerfile
@@ -1,3 +1,4 @@
+FROM docker:dind
 FROM jupyterhub/jupyterhub:0.7.2
 
 WORKDIR /srv/jupyterhub
@@ -9,8 +10,6 @@ RUN  git clone https://github.com/jupyterhub/dockerspawner.git && \
      cd dockerspawner && \
      pip install . && \
      cd ..
-
-RUN apt-get -yqq update && apt-get -yqq install docker.io
 
 EXPOSE 8000
 EXPOSE 389
