network must be external apparently

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   jupyterhub:
     image: rueberger/janelia_jupyterhub:latest
+    container_name: jupyterhub
     deploy:
       replicas: 2
       restart_policy:
@@ -14,4 +15,5 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 networks:
-  jhub:
+  jupyterhub-network:
+    external: true
